fixed padding on mobile

--- a/style.css
+++ b/style.css
@@ -110,8 +110,8 @@ footer .social-links a:hover {
 
 @media (max-width: 768px) {
   .hero {
-    padding-left: 5px;
     text-align: center;
+    padding: 5px 8px;
   }
   .hero .job {
     font-size: 50px;
